--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.4.1",
+    "@googlemaps/places": "^2.0.1",
     "@googlemaps/polyline-codec": "^1.0.28",
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.9.0",
