--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@googlemaps/places": "^2.0.1",
     "@googlemaps/polyline-codec": "^1.0.28",
     "@react-google-maps/api": "^2.20.6",
+    "@vis.gl/react-google-maps": "^1.5.3",
     "axios": "^1.9.0",
     "next": "15.3.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "use-places-autocomplete": "^4.0.1"
+    "use-places-autocomplete": "^4.0.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.10",
