--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.3.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "use-places-autocomplete": "^4.0.1"
+    "use-places-autocomplete": "^4.0.1",
+    "@google/generative-ai": "^0.24.1"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.10",
