--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.9.0",
     "next": "15.3.3",
+    "openai": "^5.8.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "use-places-autocomplete": "^4.0.1"
