--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "openai": "^5.8.2",
+    "rc-slider": "^11.1.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
