--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": "^0.0.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
+    "nodemailer": "^7.0.5",
     "openai": "^5.8.2",
     "rc-slider": "^11.1.8",
     "react": "19.1.0",
@@ -36,6 +37,7 @@
     "@types/google-map-react": "^2.1.10",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "autoprefixer": "^10.0.1",
