--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rc-slider": "^11.1.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^4.7.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "use-places-autocomplete": "^4.0.1",
