--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": "^0.0.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
+    "next-nprogress-bar": "^2.4.7",
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.5",
     "openai": "^5.8.2",
