--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dependencies": "^0.0.1",
+    "firebase": "^12.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "next-nprogress-bar": "^2.4.7",
