--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-google-maps/api": "^2.20.6",
+    "@vercel/analytics": "^1.5.0",
     "@vis.gl/react-google-maps": "^1.5.4",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
